@@ -1,14 +1,13 @@
 package com.project.shopapp.configurations;
 
 import com.project.shopapp.filters.JwtTokenFilter;
-import com.project.shopapp.models.Role;
+import com.project.shopapp.models.user.Role;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -19,7 +18,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -27,11 +25,12 @@ import java.util.List;
 @RequiredArgsConstructor
 @EnableWebSecurity(debug = true)
 //@EnableGlobalMethodSecurity(prePostEnabled = true)
-public class WebSecurityConfig {
+public class WebSecurityConfig  {
     private final JwtTokenFilter jwtTokenFilter;
 
     @Value("${api.prefix}")
     private String apiPrefix;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
@@ -39,7 +38,8 @@ public class WebSecurityConfig {
                 .authorizeHttpRequests(requests -> {
                     requests.requestMatchers(
                                     String.format("%s/users/register", apiPrefix),
-                                    String.format("%s/users/login", apiPrefix)
+                                    String.format("%s/users/login", apiPrefix),
+                                    String.format("%s/payments/vnpay-payment/**", apiPrefix)
                             )
                             .permitAll()
                             .requestMatchers(HttpMethod.GET,
@@ -47,6 +47,9 @@ public class WebSecurityConfig {
 
                             .requestMatchers(HttpMethod.GET,
                                     String.format("%s/categories**", apiPrefix)).permitAll()
+
+                            .requestMatchers(HttpMethod.GET,
+                                    String.format("%s/payments/vnpay-payment/**", apiPrefix)).permitAll()
 
                             .requestMatchers(HttpMethod.GET,
                                     String.format("%s/categories/**", apiPrefix)).permitAll()
@@ -129,6 +132,9 @@ public class WebSecurityConfig {
                             .requestMatchers(HttpMethod.DELETE,
                                     String.format("%s/cart_details/**", apiPrefix)).hasAnyRole(Role.USER, Role.ADMIN)
 
+                            .requestMatchers(HttpMethod.GET,
+                                    String.format("%s/user/current-user", apiPrefix)).hasAnyRole(Role.USER, Role.ADMIN)
+
                             .anyRequest()
                             .authenticated();
                 })
@@ -137,10 +143,10 @@ public class WebSecurityConfig {
             @Override
             public void customize(CorsConfigurer<HttpSecurity> httpSecurityCorsConfigurer) {
                 CorsConfiguration corsConfiguration = new CorsConfiguration();
-                corsConfiguration.setAllowedOrigins(List.of("*"));
-                corsConfiguration.setAllowedMethods(Arrays.asList("GET", "PUT", "POST", "DELETE", "PATCH", "OPTIONS"));
-                corsConfiguration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-                corsConfiguration.setExposedHeaders(List.of("x-auth-token"));
+                corsConfiguration.addAllowedOrigin("*");
+                corsConfiguration.addAllowedHeader("*");
+                corsConfiguration.addAllowedMethod("*");
+//                corsConfiguration.setExposedHeaders(List.of("x-auth-token"));
 
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", corsConfiguration);
